Fixed gap between CorrectSet components

--- a/src/index.css
+++ b/src/index.css
@@ -156,6 +156,7 @@ body {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  gap: 8px;
 }
 
 .correct-set-container {
@@ -163,7 +164,6 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-bottom: 8px;
   padding: 0 1rem;
   border-radius: 6px;
   font-size: 0.75rem;
@@ -172,6 +172,8 @@ body {
   z-index: 1;
   animation-fill-mode: forwards;
   overflow: hidden;
+  width: 96vw;
+  max-width: calc(3 * 8px + 4 * 100px);
   min-width: 0;
   color: #000;
   flex-grow: 1;
@@ -181,6 +183,7 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 8px;
+  width: 96vw;
   max-width: calc(3 * 8px + 4 * 100px);
 }
 
@@ -219,7 +222,7 @@ body {
   font-weight: 700;
   text-transform: uppercase;
   aspect-ratio: 1;
-  width: 100px;
+  max-width: 100px;
 }
 
 .play-page-mistakes-section {
